--- a/document/source/abstract.tex
+++ b/document/source/abstract.tex
@@ -1,3 +1,10 @@
-Safety and mission performance validation of autonomous vehicles is a major challenge. We describe a methodology for constructing and applying assertion checks, operating in simulation or in the real world. We have been developing a library of assertions derived from the UK Highway Code (UKHC), as an example of a legal code of practice. Transformation of UKHC rules into logical assertions can be done either by direct translation or by physical modelling, to yield logical assertion expressions. We have developed a validation suite using a geospatial information system in an SQL database, to perform assertion checking of UKHC rules. 
+Safety and mission performance validation of autonomous vehicles is a major challenge. We describe a methodology for constructing and applying assertion checks, operating in simulation or in the real world. 
 %
-The paper presents some initial simulation and realtime video analysis experiments that apply assertions related to vehicle overtaking, and a brief analysis of the safety and mission performance characteristics measured.
+An assertion library has been derived from the UK Highway Code (UKHC), as an example of a legal code of practice. 
+%
+Transformation of UKHC rules into logical assertions can be achieved either by direct translation or by physical modelling, to yield logical assertion expressions.
+%
+To validate the effectiveness of the assertion library we have performed assertion checking of the UKHC rules using a geospatial information system in an SQL database.\todo[inline]{``validation suite'' only occurs in abstract?}
+%
+This paper presents initial simulation and realtime video analysis experiments that apply assertions related to vehicle overtaking, and a brief analysis of the safety and mission performance characteristics measured.
+\todo[inline]{What are the contributions? More detail on scope (focus on overtaking to illustrate the approach as we don't yet have a ``library''.}
