--- a/document/source/body.tex
+++ b/document/source/body.tex
@@ -7,29 +7,29 @@ Verification and validation are important to earning trust and gaining confidenc
 
 Autonomous systems are significantly more complex than their non-autonomous counterparts, and therefore more difficult to validate. Whereas a non-autonomous system is usually designed only to deliver a given servo-mechanical or information processing relationship from inputs to outputs (its function), the problem of autonomy is concerned with how that function is used to achieve one or more situated tasks within the environment, which have specified goals that must be achieved. The state of the environment is as much a part of the validation problem of an autonomous system as the internal state of the system. Hence, the task of validation is often a much higher dimensional problem to solve than for conventional systems, leading to a major expansion in the number of states of a system that may need to be tested. 
 %
-Field testing, often the traditional approach to validating systems in their target environments, is likely to be prohibitively expensive for autonomous systems, if a high degree of coverage or statistical confidence is required for safety assurance. This has led to much interest and research into the use of driving simulators\footnote{Examples include: \url{https://www.rfpro.com} and \url{http://carla.org}} for safety validation. Simulation offers the possibility to exercise at least the decision-making logic of a system over a wide range of simulated conditions, and at accelerated rates compared to real-time physical testing. However, the exponential expansion of states associated with autonomy problems\todo{autonomy problems - is this politically correct, i.e. ``problems''?} can also lead to infeasible testing time and resource usage even for simulators. So, care must be taken to ensure simulators are used efficiently and effectively, obtaining as much validation information as possible and getting to the important test conditions that provide key information about the safety properties of a system as fast as possible, rather than by `brute force' approaches such as statistical testing.
+Field testing, often the traditional approach to validating systems in their target environments, is likely to be prohibitively expensive for autonomous systems, if a high degree of coverage or statistical confidence is required for safety assurance. This has led to much interest and research into the use of driving simulators\footnote{Examples include: \url{https://www.rfpro.com} and \url{http://carla.org}} for safety validation. Simulation offers the possibility to exercise at least the decision-making logic of a system over a wide range of simulated conditions, and at accelerated rates compared to real-time physical testing. However, the exponential expansion of states associated with autonomy problems\todo[inline]{autonomy problems - is this politically correct, i.e. ``problems''?} can also lead to infeasible testing time and resource usage even for simulators. So, care must be taken to ensure simulators are used efficiently and effectively, obtaining as much validation information as possible and getting to the important test conditions that provide key information about the safety properties of a system as fast as possible, rather than by `brute force' approaches such as statistical testing.
 
-We are interested, therefore, in test methodologies that incorporate the classification, measurement and evaluation of a system's situated behaviour. One such approach is based on the specification of situated behavioural properties as \emph{assertions}, logical expressions that can be applied at some or even all steps of a simulation session\todo{or at runtime, so I'd take this out from ``at some'' up to here} to monitor the behaviour of the system under test and to report any property violations. 
+We are interested, therefore, in test methodologies that incorporate the classification, measurement and evaluation of a system's situated behaviour. One such approach is based on the specification of situated behavioural properties as \emph{assertions}, logical expressions that can be applied at some or even all steps of a simulation session\todo[inline]{or at runtime, so I'd take this out from ``at some'' up to here} to monitor the behaviour of the system under test and to report any property violations. 
 %
-These properties (oracles) relate to the observable driving behaviour of road vehicles. They characterise what a vehicle\todo{really any vehicle, i.e.\ these could also be part of a driving simulator to be used by learner drivers} may be expected or legally required to achieve on public roads. 
+These properties (oracles) relate to the observable driving behaviour of road vehicles. They characterise what a vehicle\todo[inline]{really any vehicle, i.e.\ these could also be part of a driving simulator to be used by learner drivers} may be expected or legally required to achieve on public roads. 
 %
 The class of oracles we are investigating is the ``rules of the road'' legal driving codes for human drivers, which exist in most countries. We are focusing on our home country's rules, the UK Highway Code~\cite{highwayCode} (UKHC), as a working example.
 
 The UKHC is a long established document, about a century old at time of writing\footnote{\url{https://en.wikipedia.org/wiki/The\_Highway\_Code\#History}}, and has been subject to continual revision and evolution of the set of rules contained therein. We consider the UKHC to be a mature and valid reference source for a safe driving code of practice. 
-Publicly available data\footnote{\url{https://en.wikipedia.org/wiki/Reported\_Road\_Casualties\_Great\_Britain}} indicates that despite a significant increase in road users, UK road deaths have been decreasing monotonically since 1966. While there have been many causal factors contributing this trend (e.g.\ seat belts, airbags etc.), we argue that the advice given in the UKHC must have at least some partial contribution to this trend. \todo{Leave out? Had any advice given at any particular time been confusing or contradictory, then it may have led to increases in accident rates, or would have been detected and corrected over time by UK motoring institutions such as driving instructors, driving test agencies, etc.} Since much of the content of the UKHC has been largely stable for many years, we argue that this is because the advice given is sound, and hence we conclude that it can be a valid reference for constructing safety validation assertions.\todo{Why only safety? Liveness is also important. Or not?}
+Publicly available data\footnote{\url{https://en.wikipedia.org/wiki/Reported\_Road\_Casualties\_Great\_Britain}} indicates that despite a significant increase in road users, UK road deaths have been decreasing monotonically since 1966. While there have been many causal factors contributing this trend (e.g.\ seat belts, airbags etc.), we argue that the advice given in the UKHC must have at least some partial contribution to this trend. \todo[inline]{Leave out? Had any advice given at any particular time been confusing or contradictory, then it may have led to increases in accident rates, or would have been detected and corrected over time by UK motoring institutions such as driving instructors, driving test agencies, etc.} Since much of the content of the UKHC has been largely stable for many years, we argue that this is because the advice given is sound, and hence we conclude that it can be a valid reference for constructing safety validation assertions.\todo[inline]{Why only safety? Liveness is also important. Or not?}
 
-The driving rules in the UKHC are in effect an oracle for correct behaviour on the road. In this paper we investigate how to systematically transform them into assertions which can be applied as monitoring checks. To achieve this, the driving rules must be translated from human-readable format to machine-readable expressions that can be automatically monitored during simulation-based testing and also during operation. Although we select the UKHC as the oracle for pragmatic reasons, it could equally be replaced with other metrics pertaining to functionality or even social convention. We review some related work in Section~\ref{Related_work}, in which other potential sources for oracles have been identified.\todo{Say what we do and that we do it on two examples} 
+The driving rules in the UKHC are in effect an oracle for correct behaviour on the road. In this paper we investigate how to systematically transform them into assertions which can be applied as monitoring checks. To achieve this, the driving rules must be translated from human-readable format to machine-readable expressions that can be automatically monitored during simulation-based testing and also during operation. Although we select the UKHC as the oracle for pragmatic reasons, it could equally be replaced with other metrics pertaining to functionality or even social convention. We review some related work in Section~\ref{Related_work}, in which other potential sources for oracles have been identified.\todo[inline]{Say what we do and that we do it on two examples} 
 %
 We present two examples for applying assertions for safety validation based on driving code of practice, within a simulation system and an online monitoring system. Both examples involve lane changes during an overtaking scenario. Assertions may be applied either in a simulation system during AV system development, or in a runtime mode during operational service. We present how the same assertion framework can be used for either case. We adopt the terms scene, scenario and situation from~\cite{Ulbrich2015} throughout this paper. 
 
 %\subsection{Safety argument}
 These checks may be used as evidence to show functional safety compliance to national regulations or codes of practice, the general safety argument being that if an AV satisfies all the rules that may be legally expected of a human driver, then its behaviour is comparable to that of human drivers and therefore should be acceptable, or at least legal. It should be noted that acceptance may therefore be somewhat context-specific, against the code of practice for each country, and what passes under one legal code may not be acceptable in another. We anticipate that there may need to be extensive harmonization of national driving codes in order to avoid having to re-certify vehicles for each new national market and improve the cost-effectiveness of AV certification processes, but this is outside the scope of this paper.
 
-The need to measure the compliance of an AV's behaviour with legal codes of practice may go beyond the initial design validation or certification stage as performed in simulation and (to some extent) road tests. It may become necessary to measure such compliance during vehicle operation, for example to establish that the vehicle's behaviour is correct (or otherwise) in the event of an incident that requires subsequent investigation. If an AV is involved in an incident, but it can be shown by assertion-based assessment during operation that it was adhering to all relevant legal standards of driving behaviour, then this may have an impact on any liability or insurance-based compensation that may be due as a consequence of the incident. A detailed discussion of the rationale and requirements for explainability of AV decision-making in post-incident investigation is beyond the scope of this paper.\todo{find some literature?}
+The need to measure the compliance of an AV's behaviour with legal codes of practice may go beyond the initial design validation or certification stage as performed in simulation and (to some extent) road tests. It may become necessary to measure such compliance during vehicle operation, for example to establish that the vehicle's behaviour is correct (or otherwise) in the event of an incident that requires subsequent investigation. If an AV is involved in an incident, but it can be shown by assertion-based assessment during operation that it was adhering to all relevant legal standards of driving behaviour, then this may have an impact on any liability or insurance-based compensation that may be due as a consequence of the incident. A detailed discussion of the rationale and requirements for explainability of AV decision-making in post-incident investigation is beyond the scope of this paper.\todo[inline]{find some literature?}
 
-\todo{This is where we ought to say how the paper is structured}
+\todo[inline]{This is where we ought to say how the paper is structured}
 
-We present a novel technique for deriving, systematically formalising and encoding assertions from the UK Highway Code\todo{Always write out or use the UKHC abbreviation introduced earlier.} and applying them in two modes: (i) within a Geospatial Information System (GIS) database linked to a vehicle simulator, and (ii) within a real-time monitoring system during vehicle operation.
+We present a novel technique for deriving, systematically formalising and encoding assertions from the UK Highway Code\todo[inline]{Always write out or use the UKHC abbreviation introduced earlier.} and applying them in two modes: (i) within a Geospatial Information System (GIS) database linked to a vehicle simulator, and (ii) within a real-time monitoring system during vehicle operation.
 
 In the first mode of use, we encode the UKHC assertions~\cite{highwayCode} as SQL queries and run them within a PostgreSQL database with a PostGIS extension.\footnote{Refer to  \url{https://www.postgresql.org/} and \url{http://postgis.net}.} In this mode, the assertions can make use of any data stream available, passed into the database records.
 
@@ -45,7 +45,7 @@ Section~\ref{Use_of_assertions} discusses the  methodology of developing asserti
 %
 Section~\ref{Experimental_scenario} presents the scenario we have used to demonstrate the application of assertion-based oracles and describes two case studies which we use to illustrate the two options, simulation testing and operational monitoring. The results from the case studies are presented and analysed. 
 %
-In Section~\ref{discussion} we discuss some important aspects of assertion-based monitoring, which have emerged from the experimental work, in particular the use of assertions for performance monitoring as well as for safety, and the observation that in many assertions the intention of ego-vehicle agents may also need to be monitored.\todo{say why} 
+In Section~\ref{discussion} we discuss some important aspects of assertion-based monitoring, which have emerged from the experimental work, in particular the use of assertions for performance monitoring as well as for safety, and the observation that in many assertions the intention of ego-vehicle agents may also need to be monitored.\todo[inline]{say why} 
 %
 Finally, in Section~\ref{conclusion} we draw conclusions and suggest directions for future work.
 
@@ -53,9 +53,9 @@ Finally, in Section~\ref{conclusion} we draw conclusions and suggest directions 
 \section{Related Work}
 \label{Related_work}
 
-Over the past few years, several researchers have investigated the classification and analysis of autonomous driving safety. However, most early works focus on autonomous driving robots in an industrial environment. Park et al.~\cite{safespace} uses braking distance to calculate so-called risk distance, and then plan a safe trajectory to avoid obstacles. While the resulting method has a good performance in a rule-free environment, it is highly unlikely that this method alone would be sufficient to accommodate any human-defined safety rules in its path planning algorithm.\todo{But that is to inform the vehicle, not for external assessment, or?} In~\cite{prioritylanguage} Bourbakis developed a priority language to formalise human-defined traffic rules in a machine-understandable fashion. Their priority language, called KYKLOFORIA, can be used by autonomous robots to navigate dynamic environments by defining a navigation corridor for every robot in the environment and then generate a navigation strategy using the language. While the language appears very promising for navigation tasks in a free dynamic environment, it is unclear how to use it in a constrained setting of the road traffic to verify the correctness of the vehicle's manoeuvre.\todo{So, both of these are for the robots to use to improve their behaviour, not for external assessment - yes?}
+Over the past few years, several researchers have investigated the classification and analysis of autonomous driving safety. However, most early works focus on autonomous driving robots in an industrial environment. Park et al.~\cite{safespace} uses braking distance to calculate so-called risk distance, and then plan a safe trajectory to avoid obstacles. While the resulting method has a good performance in a rule-free environment, it is highly unlikely that this method alone would be sufficient to accommodate any human-defined safety rules in its path planning algorithm.\todo[inline]{But that is to inform the vehicle, not for external assessment, or?} In~\cite{prioritylanguage} Bourbakis developed a priority language to formalise human-defined traffic rules in a machine-understandable fashion. Their priority language, called KYKLOFORIA, can be used by autonomous robots to navigate dynamic environments by defining a navigation corridor for every robot in the environment and then generate a navigation strategy using the language. While the language appears very promising for navigation tasks in a free dynamic environment, it is unclear how to use it in a constrained setting of the road traffic to verify the correctness of the vehicle's manoeuvre.\todo[inline]{So, both of these are for the robots to use to improve their behaviour, not for external assessment - yes?}
 
-There has been some recent work to make autonomous vehicles abide by highway traffic laws by formalizing the rules in a language that robots can understand.\todo{This sentence fits better into our introduction? This is challenging not only because the traffic rules are often vague and conflicting, but also due to rule changes and the need for common sense knowledge.} Prakken et al.~\cite{lawabidingstudy} discusses some of these issues and argue in favour of the need for formalization of traffic rules. Rizaldi et al.~\cite{acountability} use the formalization as a means to resolve accountability issues in an event of an accident. To the best of our knowledge, most work~\cite{acountability, esterle, rizaldi, alves} advocates the use of Higher-Order Logic (HOL) to codify a wide range of traffic rules into a formal language. The authors of~\cite{acountability, esterle, rizaldi, alves} use Linear Temporal Logics (LTL) to construct a set of equations for various manoeuvres to ensure road safety. To construct these equations, a formal model of each lane and lane marking is required. The authors of~\cite{rizaldi} used \textit{lanelets}~\cite{lanelets2014} to build these lane models. While many works use the German or Vienna convention~\cite{vienna} on road traffic, in~\cite{alves} a road junction rule from the UK Highway Code~\cite{highwayCode} is used to demonstrate their methodology. Some researchers~\cite{sqlhuang, sqlgueffaz} have used temporal logic queries to formulate the HOL. These queries can be formulated using a variety of query languages like SQL, OQL, RQL, etc. In this paper, we use SQL to build the assertions due to their high expressiveness~\cite{sqllibkin}. Encoding every rule by hand is, however, an extensive and potentially error-prone task. 
+There has been some recent work to make autonomous vehicles abide by highway traffic laws by formalizing the rules in a language that robots can understand.\todo[inline]{This sentence fits better into our introduction? This is challenging not only because the traffic rules are often vague and conflicting, but also due to rule changes and the need for common sense knowledge.} Prakken et al.~\cite{lawabidingstudy} discusses some of these issues and argue in favour of the need for formalization of traffic rules. Rizaldi et al.~\cite{acountability} use the formalization as a means to resolve accountability issues in an event of an accident. To the best of our knowledge, most work~\cite{acountability, esterle, rizaldi, alves} advocates the use of Higher-Order Logic (HOL) to codify a wide range of traffic rules into a formal language. The authors of~\cite{acountability, esterle, rizaldi, alves} use Linear Temporal Logics (LTL) to construct a set of equations for various manoeuvres to ensure road safety. To construct these equations, a formal model of each lane and lane marking is required. The authors of~\cite{rizaldi} used \textit{lanelets}~\cite{lanelets2014} to build these lane models. While many works use the German or Vienna convention~\cite{vienna} on road traffic, in~\cite{alves} a road junction rule from the UK Highway Code~\cite{highwayCode} is used to demonstrate their methodology. Some researchers~\cite{sqlhuang, sqlgueffaz} have used temporal logic queries to formulate the HOL. These queries can be formulated using a variety of query languages like SQL, OQL, RQL, etc. In this paper, we use SQL to build the assertions due to their high expressiveness~\cite{sqllibkin}. Encoding every rule by hand is, however, an extensive and potentially error-prone task. 
 
 DeCastro et al.~\cite{decastro} guide an agent to learn probabilistic models, via a learning-based algorithm, constrained by safety contracts which are in essence traffic rules. However, the major challenges for using learning algorithms are completeness and verification of the solutions. Such systems are essentially a black box, and it is extremely difficult to validate their correctness. Another major problem is what reward or cost function should be used to train the model. One approach can be to have an oracle providing rewards for correct behaviour, but this leads back to developing traditional assertion-based rules using the relevant highway code.
 
@@ -63,7 +63,7 @@ The Responsibility Sensitive Safety (RSS) framework developed by MobilEye~\cite{
 
 All the works discussed earlier are limited to detecting the occurrence of some undesirable events while driving. However, such events are not equal in severity~\cite{sinha}. Myers et al.~\cite{myers} propose a framework to access autonomous driving systems using two types of scoring rules: prescriptive and risk-based. To the best of our understanding, the prescriptive scoring mechanism captures the capability of the AV to follow traffic rules while the risk-based scoring system assesses the behaviour of the AV in rare events where undesirable outcomes are unavoidable, and it is expected of the AV to exhibit behaviour that would minimise the risk. Developing a generic system to score risks in different scenarios is challenging and requires a separate study of its own. Therefore, risk-based assessment is not part of this paper.
 
-\todo{Conclude with how our work differs and contributes to the existing body of knowledge.}
+\todo[inline]{Conclude with how our work differs and contributes to the existing body of knowledge.}
 
 
 \section{System Architecture for Assertion-based Monitoring} \label{generic_architecture}
@@ -79,16 +79,16 @@ The evaluation of assertions requires an appropriate environment to generate veh
     \label{fig:SimulatorArchitecture}
 \end{figure}
 
-  Figure \ref{fig:SimulatorArchitecture} shows a layout for a simulation-based testbench that indicates the context in which the assertions database subsystem is used:\todo{Should the figure not also include assertion coverage?}
+  Figure \ref{fig:SimulatorArchitecture} shows a layout for a simulation-based testbench that indicates the context in which the assertions database subsystem is used:\todo[inline]{Should the figure not also include assertion coverage?}
 
   \begin{itemize}
       \item The \emph{Experiment Instantiation} subsystem generates test scenarios derived from the \emph{Experiment Specification} which may include test objectives or requirements (defined in natural language). This subsystem identifies the \emph{Static} information about the environment (e.g. maps, road features) and \emph{Dynamic} descriptions of the behaviour required of simulated actors (vehicles, other road users, traffic lights, any third-party agents necessary to the test requirement). 
-      The experimental configuration determines the test case that will contribute coverage towards the assertion.\todo{Nothing said yet about coverage.}
+      The experimental configuration determines the test case that will contribute coverage towards the assertion.\todo[inline]{Nothing said yet about coverage.}
       \item The \emph{Simulator} subsystem interacts with the \emph{AV Control} subsystem - although for the purposes of this paper a dummy controller is used that can be set to pass or fail assertions to demonstrate the full extent of the assertion-based safety validation approach. The simulator used is the CARLA simulator\footnote{\url{https://carla.org/}}, but in principle this could be exchanged for other simulators with only moderate effort.
-      \item The \emph{Data Capture} subsystem records relevant simulation data about the driving situation of the AV, including actor positions and road network information, and at each time step of the simulation writes this information into the records of the database to be used for assertion checking.\todo{Should there not be a DB symbol (looks like a tin) to show the database we are sourcing?}
-      \item The \emph{Assertion Checker} subsystem together with the \emph{Assertions} library constitute the test \emph{Oracle}. These subsystems evaluate all assertions relevant to the driving situation defined at each step of the simulation. The \emph{Outputs} are a a set of Pass/Fail declarations which can be used to annotate the simulation log or be recorded in a separate file if desired.\todo{Should there not be a DB symbol to represent the assertion library, i.e.\ a set of SQL queries?}
+      \item The \emph{Data Capture} subsystem records relevant simulation data about the driving situation of the AV, including actor positions and road network information, and at each time step of the simulation writes this information into the records of the database to be used for assertion checking.\todo[inline]{Should there not be a DB symbol (looks like a tin) to show the database we are sourcing?}
+      \item The \emph{Assertion Checker} subsystem together with the \emph{Assertions} library constitute the test \emph{Oracle}. These subsystems evaluate all assertions relevant to the driving situation defined at each step of the simulation. The \emph{Outputs} are a a set of Pass/Fail declarations which can be used to annotate the simulation log or be recorded in a separate file if desired.\todo[inline]{Should there not be a DB symbol to represent the assertion library, i.e.\ a set of SQL queries?}
   \end{itemize}
-  We will focus on describing the assertion oracle in greater detail in the remainder of this paper.\todo{add the relevant section}\todo[inline]{Really, the ``Simulator'' interfaces with the ``Data Collector'', which writes to a ``Simulation Log'' DB. There is also an Assertion DB. The Assertion Checker sources both the ``Simulation Log'' DB and the ``Assertion'' DB. There is enough space to do this, as follows: Experimental Instantiation -> Experimental \\ Instantiation and make box smaller, this means the LHS occupies less space. Move ``Data Collector'' into that space. Add DB to RHS of Data Collector - this results in two DB icons on RHS. }
+  We will focus on describing the assertion oracle in greater detail in the remainder of this paper.\todo[inline]{add the relevant section}\todo[inline]{Really, the ``Simulator'' interfaces with the ``Data Collector'', which writes to a ``Simulation Log'' DB. There is also an Assertion DB. The Assertion Checker sources both the ``Simulation Log'' DB and the ``Assertion'' DB. There is enough space to do this, as follows: Experimental Instantiation -> Experimental \\ Instantiation and make box smaller, this means the LHS occupies less space. Move ``Data Collector'' into that space. Add DB to RHS of Data Collector - this results in two DB icons on RHS. }
 
 \subsection{Runtime Monitoring}
 The basic argument underlying our approach to assertion-based runtime monitoring is that the assertions we have developed for checking in the geospatial database can also be utilised during runtime to act as a reference model and monitor the AV during operation.
